--- a/www.nass.gov.ng/9444e8ed87a1018b982f4e3b5668986441d7d571.yml
+++ b/www.nass.gov.ng/9444e8ed87a1018b982f4e3b5668986441d7d571.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 00:51:05 GMT
+    - Sun, 18 Jun 2017 18:31:11 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=kXZPb45d%2CaSzf09TiHQDU0; path=/
+    - PHPSESSID=-aZRjBZL6Peb7zvfCI3YF3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 00:51:05 GMT
+recorded_at: Sun, 18 Jun 2017 18:31:11 GMT
