--- a/www.nass.gov.ng/eac6742352fe806d1b1c080e926ddd8bd3afc30b.yml
+++ b/www.nass.gov.ng/eac6742352fe806d1b1c080e926ddd8bd3afc30b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 00:53:24 GMT
+    - Sun, 18 Jun 2017 18:33:21 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=LimUHBzrkbXPZwjCrzCk42; path=/
+    - PHPSESSID=l6rA16HnuJZ3RWxbj6%2CJl0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 00:53:24 GMT
+recorded_at: Sun, 18 Jun 2017 18:33:21 GMT
