--- a/www.nass.gov.ng/370e6b6dbd5e2db8bb9a295aba6d071f112e141f.yml
+++ b/www.nass.gov.ng/370e6b6dbd5e2db8bb9a295aba6d071f112e141f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 00:54:57 GMT
+    - Sun, 18 Jun 2017 18:35:19 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=QtcpRk%2CzVqFA79f0bw6rG1; path=/
+    - PHPSESSID=1nQHCWjvnYkEUYIVgudYH2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 00:54:57 GMT
+recorded_at: Sun, 18 Jun 2017 18:35:20 GMT
