--- a/www.nass.gov.ng/bac816375258b589f00692d38186b54b5b4a8c57.yml
+++ b/www.nass.gov.ng/bac816375258b589f00692d38186b54b5b4a8c57.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 00:56:57 GMT
+    - Sun, 18 Jun 2017 18:37:57 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=bjbBZpAb4XpDE7Zqbf0wq2; path=/
+    - PHPSESSID=ZI-3M0Kzbape%2CxB-F6Y2w1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 00:56:57 GMT
+recorded_at: Sun, 18 Jun 2017 18:37:57 GMT
