--- a/www.nass.gov.ng/3fa26d97b56f7183aff1296285516c6fbcb062ce.yml
+++ b/www.nass.gov.ng/3fa26d97b56f7183aff1296285516c6fbcb062ce.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 01:02:23 GMT
+    - Sun, 18 Jun 2017 18:42:35 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=d8np-jCTKbaGCYFoh519H0; path=/
+    - PHPSESSID=%2CofRalSfdgu0CLJtmdaB%2C1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 01:02:24 GMT
+recorded_at: Sun, 18 Jun 2017 18:42:35 GMT
