--- a/www.nass.gov.ng/4d6c3cbe54405edd9c86ca311b68545aafd41559.yml
+++ b/www.nass.gov.ng/4d6c3cbe54405edd9c86ca311b68545aafd41559.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 01:06:40 GMT
+    - Sun, 18 Jun 2017 18:47:18 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ceAK%2Cg5Fg1ReoJSqiHm8X1; path=/
+    - PHPSESSID=8VNnu7suFqTxveokpe4en3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 01:06:40 GMT
+recorded_at: Sun, 18 Jun 2017 18:47:18 GMT
