--- a/www.nass.gov.ng/5a6505a156b29bc998c7a9a5661fa537c1a10bd0.yml
+++ b/www.nass.gov.ng/5a6505a156b29bc998c7a9a5661fa537c1a10bd0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 01:09:19 GMT
+    - Sun, 18 Jun 2017 18:48:36 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=b3h1%2CmRCZejs8PcN5AghW2; path=/
+    - PHPSESSID=v1MbG1J1E3o1qp8Yn8Nvf3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 01:09:20 GMT
+recorded_at: Sun, 18 Jun 2017 18:48:36 GMT
