--- a/www.nass.gov.ng/ab8a4c23bfa257c00ddbd8af7f4d0e8d0f85b539.yml
+++ b/www.nass.gov.ng/ab8a4c23bfa257c00ddbd8af7f4d0e8d0f85b539.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 01:12:36 GMT
+    - Sun, 18 Jun 2017 18:53:27 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=kvjA5AJGUZ-p%2CYZ%2CP9Ax92; path=/
+    - PHPSESSID=q-PcAKogP4JvP5T51UrAv0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 01:12:36 GMT
+recorded_at: Sun, 18 Jun 2017 18:53:27 GMT
