--- a/www.nass.gov.ng/6f2bfc30402ce2ae085eb5155ed5eacdd4e70f18.yml
+++ b/www.nass.gov.ng/6f2bfc30402ce2ae085eb5155ed5eacdd4e70f18.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 01:14:12 GMT
+    - Sun, 18 Jun 2017 18:55:22 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=D2OAAX5BIt7Ybhv18XEd00; path=/
+    - PHPSESSID=2pOlMFhv3HAmfPNv%2C83W30; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 01:14:12 GMT
+recorded_at: Sun, 18 Jun 2017 18:55:22 GMT
