--- a/www.nass.gov.ng/a5171c5522c4232a71dead4a30027e824371267c.yml
+++ b/www.nass.gov.ng/a5171c5522c4232a71dead4a30027e824371267c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 01:14:30 GMT
+    - Sun, 18 Jun 2017 18:56:14 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=CISHRnTVZsadB%2Cz%2Cm4t230; path=/
+    - PHPSESSID=jjcBM7LX479YxMp0gu9O82; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 01:14:30 GMT
+recorded_at: Sun, 18 Jun 2017 18:56:14 GMT
