--- a/www.nass.gov.ng/a4b506308f35817cca495593876d0aa32d9d6f72.yml
+++ b/www.nass.gov.ng/a4b506308f35817cca495593876d0aa32d9d6f72.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 01:16:56 GMT
+    - Sun, 18 Jun 2017 18:58:54 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=cGwJspswFpx0Sb%2C6DsBvr3; path=/
+    - PHPSESSID=hsg3ayqQnNv8tbeYnvhVP3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 01:16:56 GMT
+recorded_at: Sun, 18 Jun 2017 18:58:55 GMT
