--- a/www.nass.gov.ng/ecaeb1c0a4881e8724d62b7d9dc85139fb441f6b.yml
+++ b/www.nass.gov.ng/ecaeb1c0a4881e8724d62b7d9dc85139fb441f6b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 01:17:58 GMT
+    - Sun, 18 Jun 2017 18:59:11 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=bh-WBq6ScADqsY%2CAL6ylQ2; path=/
+    - PHPSESSID=TmLIZDNXFiO7wVCNsh9pF2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 01:17:58 GMT
+recorded_at: Sun, 18 Jun 2017 18:59:11 GMT
