--- a/www.nass.gov.ng/fbc92e0393bc33d1c047e43c893ac0357415bf90.yml
+++ b/www.nass.gov.ng/fbc92e0393bc33d1c047e43c893ac0357415bf90.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 01:19:18 GMT
+    - Sun, 18 Jun 2017 19:00:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=zhsxbOFDwkDcz8%2Ck8vWPK1; path=/
+    - PHPSESSID=Ax1iuNnJgA6lf%2C8pmPmJy0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 01:19:18 GMT
+recorded_at: Sun, 18 Jun 2017 19:00:28 GMT
