--- a/www.nass.gov.ng/c5e3dd6280cba67da6678292f0081502e5c87591.yml
+++ b/www.nass.gov.ng/c5e3dd6280cba67da6678292f0081502e5c87591.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 01:21:13 GMT
+    - Sun, 18 Jun 2017 19:03:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Yjqf16Ed2Fd1KRTnOXWa%2C2; path=/
+    - PHPSESSID=WtCPOxIbMeKNO9M8mK7sK2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 01:21:13 GMT
+recorded_at: Sun, 18 Jun 2017 19:03:48 GMT
