--- a/www.nass.gov.ng/56e731f90f4607df2a75946ac7ab3151ef4e3b34.yml
+++ b/www.nass.gov.ng/56e731f90f4607df2a75946ac7ab3151ef4e3b34.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 01:23:27 GMT
+    - Sun, 18 Jun 2017 19:06:14 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=oKPX61O21mHB%2CSvtjQcZZ1; path=/
+    - PHPSESSID=DQ86F0wJkUlS589PwAxRq2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 01:23:27 GMT
+recorded_at: Sun, 18 Jun 2017 19:06:14 GMT
