--- a/www.nass.gov.ng/ba1541f138e4adba9a2e3b75f86cb47d6aab0ee6.yml
+++ b/www.nass.gov.ng/ba1541f138e4adba9a2e3b75f86cb47d6aab0ee6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 01:25:31 GMT
+    - Sun, 18 Jun 2017 19:07:47 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ymqTpqs6T0HrxhkM%2CfY0H0; path=/
+    - PHPSESSID=aHjs5%2CHZwH7ELyH3BCNrO1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 01:25:31 GMT
+recorded_at: Sun, 18 Jun 2017 19:07:47 GMT
