--- a/www.nass.gov.ng/e31f9be331a935d0d808f50116024c8b498a8890.yml
+++ b/www.nass.gov.ng/e31f9be331a935d0d808f50116024c8b498a8890.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 01:29:36 GMT
+    - Sun, 18 Jun 2017 19:12:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=R-9ELDn7GrtLzxC5RNmEG0; path=/
+    - PHPSESSID=4iuTcSc%2CfHT1kUcSnAoU62; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 01:29:37 GMT
+recorded_at: Sun, 18 Jun 2017 19:12:39 GMT
