--- a/www.nass.gov.ng/ef6b18214d01ed0a918c52c26cb93865acf3ee63.yml
+++ b/www.nass.gov.ng/ef6b18214d01ed0a918c52c26cb93865acf3ee63.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 01:30:38 GMT
+    - Sun, 18 Jun 2017 19:14:16 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=FWAOYDjDs892QhlvX9dDO1; path=/
+    - PHPSESSID=4%2CP2Llc1V9wN91xFJRj%2CC0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 01:30:38 GMT
+recorded_at: Sun, 18 Jun 2017 19:14:16 GMT
