--- a/www.nass.gov.ng/cf0ce432b02edccc8fd045b91af6eaa149503806.yml
+++ b/www.nass.gov.ng/cf0ce432b02edccc8fd045b91af6eaa149503806.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 01:38:46 GMT
+    - Sun, 18 Jun 2017 19:21:13 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=R8kuVWcfZtI%2C%2CGwIgiFKg1; path=/
+    - PHPSESSID=I%2Cep6lmrQNrcBGHaQZySA1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 01:38:46 GMT
+recorded_at: Sun, 18 Jun 2017 19:21:14 GMT
