--- a/www.nass.gov.ng/b76fdd5046c8cbe0639c340d8143c06313457195.yml
+++ b/www.nass.gov.ng/b76fdd5046c8cbe0639c340d8143c06313457195.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 01:45:29 GMT
+    - Sun, 18 Jun 2017 19:25:59 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=AKJRQ4P7AKGmpe2f%2ChPRA1; path=/
+    - PHPSESSID=2c1K6Nq8QZbPrSkFgFjEr2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 01:45:29 GMT
+recorded_at: Sun, 18 Jun 2017 19:25:59 GMT
