--- a/www.nass.gov.ng/0e7a2e14145465f85cd9b1cf1bcffd4fe363b06f.yml
+++ b/www.nass.gov.ng/0e7a2e14145465f85cd9b1cf1bcffd4fe363b06f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 01:46:50 GMT
+    - Sun, 18 Jun 2017 19:27:11 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=w0o4q1x-aejxJsWZsM4IJ3; path=/
+    - PHPSESSID=kvkGp%2C2FaWvhLIx2m2UWS0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 01:46:51 GMT
+recorded_at: Sun, 18 Jun 2017 19:27:11 GMT
