--- a/www.nass.gov.ng/dbf681fc65afbc514df45b82197fd71941b22451.yml
+++ b/www.nass.gov.ng/dbf681fc65afbc514df45b82197fd71941b22451.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 01:49:42 GMT
+    - Sun, 18 Jun 2017 19:30:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=5UMiivku9QqYGpnYUZ89u0; path=/
+    - PHPSESSID=qMWvdK5yL4RdgfY%2CSkE3Q2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 01:49:42 GMT
+recorded_at: Sun, 18 Jun 2017 19:30:17 GMT
