--- a/www.nass.gov.ng/3f4692ed5b1e0d1bf2013611b265094c1fc6b573.yml
+++ b/www.nass.gov.ng/3f4692ed5b1e0d1bf2013611b265094c1fc6b573.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 01:50:52 GMT
+    - Sun, 18 Jun 2017 19:30:53 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=xCd0BzlZ8F8wBtcC6Iqxr0; path=/
+    - PHPSESSID=1Hy-2DD2%2COgLPJfSEdyK23; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 01:50:52 GMT
+recorded_at: Sun, 18 Jun 2017 19:30:54 GMT
