--- a/www.nass.gov.ng/ab4a2e078f74117aac5ca20280e5030e1a01226a.yml
+++ b/www.nass.gov.ng/ab4a2e078f74117aac5ca20280e5030e1a01226a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 01:53:36 GMT
+    - Sun, 18 Jun 2017 19:32:29 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=VGyUZXRD57cOGc%2CqyOnFZ1; path=/
+    - PHPSESSID=Ub3W6YsTP75vkFWca6ZCM2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 01:53:36 GMT
+recorded_at: Sun, 18 Jun 2017 19:32:29 GMT
