--- a/www.nass.gov.ng/f73ea8bae0d937fb33f5ff40a6df0adc93d35f04.yml
+++ b/www.nass.gov.ng/f73ea8bae0d937fb33f5ff40a6df0adc93d35f04.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 01:58:04 GMT
+    - Sun, 18 Jun 2017 19:38:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=8j4Nm712nhHzcCEd3v6Ud3; path=/
+    - PHPSESSID=PKr%2C-LzUwtyKRw-9e1-em0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 01:58:04 GMT
+recorded_at: Sun, 18 Jun 2017 19:38:17 GMT
