--- a/www.nass.gov.ng/b18c09e3c2ef2fc2d474551ec05d9fac869cfe93.yml
+++ b/www.nass.gov.ng/b18c09e3c2ef2fc2d474551ec05d9fac869cfe93.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 02:01:36 GMT
+    - Sun, 18 Jun 2017 19:43:20 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=O664A%2Chs9HR1fvWJCH%2CgL1; path=/
+    - PHPSESSID=5GzOwLz7YnyBEXwfixMUm2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 02:01:36 GMT
+recorded_at: Sun, 18 Jun 2017 19:43:20 GMT
