--- a/www.nass.gov.ng/f0a31908cfe3a5053d060b5497f08f44933eb2c6.yml
+++ b/www.nass.gov.ng/f0a31908cfe3a5053d060b5497f08f44933eb2c6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 02:04:42 GMT
+    - Sun, 18 Jun 2017 19:47:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=LBmimfLv1EBKv5ZwQQ87%2C3; path=/
+    - PHPSESSID=EMzrLjEaeFXJALiR-E5Me2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 02:04:42 GMT
+recorded_at: Sun, 18 Jun 2017 19:47:03 GMT
