--- a/www.nass.gov.ng/42b70e9663a5d4828bdb06c06ceff1fb5d954d6c.yml
+++ b/www.nass.gov.ng/42b70e9663a5d4828bdb06c06ceff1fb5d954d6c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 02:05:20 GMT
+    - Sun, 18 Jun 2017 19:47:35 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=fl6vmshjrkK7%2CIj0CuXhT2; path=/
+    - PHPSESSID=anzt0huaEywmMrMV05N3Z3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 02:05:21 GMT
+recorded_at: Sun, 18 Jun 2017 19:47:35 GMT
