--- a/www.nass.gov.ng/43f806c1cda4d53d8a52ec8c0209af0409627a65.yml
+++ b/www.nass.gov.ng/43f806c1cda4d53d8a52ec8c0209af0409627a65.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 02:06:11 GMT
+    - Sun, 18 Jun 2017 19:48:41 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=5AEO0dRnS0UN67xaODbos0; path=/
+    - PHPSESSID=h555zI66QG2Rja6kC-%2C-j3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 02:06:11 GMT
+recorded_at: Sun, 18 Jun 2017 19:48:41 GMT
