--- a/www.nass.gov.ng/cf8fb4ba2fb657cc20906888d20d1dd78c3e431b.yml
+++ b/www.nass.gov.ng/cf8fb4ba2fb657cc20906888d20d1dd78c3e431b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 02:14:22 GMT
+    - Sun, 18 Jun 2017 19:54:31 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=nEliPJLDk%2CkTcpetKNbqy2; path=/
+    - PHPSESSID=Xa6hpRH9IuC5dIlaiFiDR3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 02:14:22 GMT
+recorded_at: Sun, 18 Jun 2017 19:54:31 GMT
