--- a/www.nass.gov.ng/8821244c61cd70440d2ed0fdd828dae0bf200cae.yml
+++ b/www.nass.gov.ng/8821244c61cd70440d2ed0fdd828dae0bf200cae.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 02:15:11 GMT
+    - Sun, 18 Jun 2017 19:54:50 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=6d8WBtFbn%2C59XXaKwm-0a2; path=/
+    - PHPSESSID=gIyXzmZJ8SPOhkT6O0tyG3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 02:15:11 GMT
+recorded_at: Sun, 18 Jun 2017 19:54:50 GMT
