--- a/www.nass.gov.ng/fb0624306c824eed4c7bd4e213daa9d7262b00df.yml
+++ b/www.nass.gov.ng/fb0624306c824eed4c7bd4e213daa9d7262b00df.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 02:15:50 GMT
+    - Sun, 18 Jun 2017 19:55:11 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=xc3997d1nbSSjKIHsU%2Ckt2; path=/
+    - PHPSESSID=Se9dr4uQt9gGToW1voC3a1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 02:15:50 GMT
+recorded_at: Sun, 18 Jun 2017 19:55:11 GMT
