--- a/www.nass.gov.ng/f4fd1df228cf6325ce20a78e624c01a0e461c647.yml
+++ b/www.nass.gov.ng/f4fd1df228cf6325ce20a78e624c01a0e461c647.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 02:19:32 GMT
+    - Sun, 18 Jun 2017 20:00:42 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=BKtPIeKQ9vxn5IrnKiymW2; path=/
+    - PHPSESSID=%2CPL6lVQa37d0EfWRJw-Ag2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 02:19:32 GMT
+recorded_at: Sun, 18 Jun 2017 20:00:42 GMT
